# Cloud-App

./: .gitignore  README.md  pyproject.toml
gamestore/: db.sqlite3
gamestore/frontend/: auth.py  decorators.py  urls.py  views.py
gamestore/frontend/static/frontend/: style.css
gamestore/frontend/templates/frontend/: base.html  checkout.html  landing.html  store.html
gamestore/frontend/templates/frontend/components/: game_card.html
gamestore/main/: views.py
gamestore/main/templates/frontend/: store.html
gamestore/store/: asgi.py  settings.py  urls.py  wsgi.py
